--- a/config.yaml
+++ b/config.yaml
@@ -15,8 +15,46 @@ models:
       replay_memory_size: 30000
       max_score: 30000
       target_update: 4
-      log_path: "DQN_new/logs"
-      saved_path: "DQN_new/trained_models"
+      log_path: "DQN/logs"
+      saved_path: "DQN/trained_models"
+      device: "cpu"
+  - model_name: DDQN
+    parameters:
+      width: 10
+      height: 20
+      block_size: 30
+      batch_size: 512
+      lr: 0.001
+      gamma: 0.99
+      initial_epsilon: 1
+      final_epsilon: 0.001
+      num_decay_epochs: 2000
+      num_epochs: 3000
+      save_interval: 1000
+      replay_memory_size: 30000
+      max_score: 30000
+      target_update: 4
+      log_path: "DDQN/logs"
+      saved_path: "DDQN/trained_models"
+      device: "cpu"
+  - model_name: NoisyDQN
+    parameters:
+      width: 10
+      height: 20
+      block_size: 30
+      batch_size: 512
+      lr: 0.001
+      gamma: 0.99
+      initial_epsilon: 1
+      final_epsilon: 0.001
+      num_decay_epochs: 2000
+      num_epochs: 3000
+      save_interval: 1000
+      replay_memory_size: 30000
+      max_score: 30000
+      target_update: 4
+      log_path: "NoisyDQN/logs"
+      saved_path: "NoisyDQN/trained_models"
       device: "cpu"
   - model_name: SAC
     parameters:
