added REINFORCE PG

--- a/config.yaml
+++ b/config.yaml
@@ -49,3 +49,21 @@ models:
   #     epsilon_clip: 0.2
   #     num_epochs: 10
   #     batch_size: 64
+  - model_name: PG
+    parameters:
+      width: 10
+      height: 20
+      block_size: 30
+      batch_size: 512
+      hidden_size: 256
+      lr: 0.001
+      alpha: 0.2
+      gamma: 0.99
+      num_decay_epochs: 10000000
+      num_epochs: 100000000
+      save_interval: 50000
+      log_interval: 1000
+      replay_memory_size: 30000
+      max_score: 30000
+      log_path: "PG/logs"
+      saved_path: "PG/trained_models"
